[package]
name = "Barcode"
version = "0.1.0"
edition = "2021"
barcoders = "1.0.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
barcoders = {version = "1.0.2", features = ["image", "ascii", "svg", "json"]}
rand = "0.8.4"
quirc = "0.0.1"
bardecoder = "0.4.1"
image = "0.24.6"
qrcode = "0.12.0"
checked_int_cast = "1.0.0"
rscan = "0.2.1"
qrcode-generator = "4.1.8"